--- a/navbar/covid/index.html
+++ b/navbar/covid/index.html
@@ -16,9 +16,9 @@
             <table id="principalSheet" class="table table-bordered table-sm table-striped"></table>
         </div>
 
-        <div class="table-responsive">
+        <!--<div class="table-responsive">
             <table id="generalSheet" class="table table-bordered table-sm table-striped"></table>
-        </div>
+        </div>-->
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.1.4/dist/sheetrock.min.js"></script>
