--- a/navbar/covid/index.html
+++ b/navbar/covid/index.html
@@ -12,10 +12,15 @@
 
 <body>
     <div class="container pt-5">
-        <div class="table-responsive">
+        <div class="table-responsive" style="display: none;">
             <table id="principalSheet" class="table table-bordered table-sm table-striped"></table>
         </div>
 
+        <div>Tabla con ajax</div>
+        <hr>
+        <div id="ajaxLoad">
+
+        </div>
         <!--<div class="table-responsive">
             <table id="generalSheet" class="table table-bordered table-sm table-striped"></table>
         </div>-->
