--- a/navbar/covid/index.html
+++ b/navbar/covid/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="m-2 pt-5">
+  <div class="container">
     <div class="table-responsive" style="display: none">
       <table id="principalSheet" class="table table-bordered table-sm table-striped"></table>
     </div>
