--- a/navbar/covid/index.html
+++ b/navbar/covid/index.html
@@ -33,7 +33,7 @@
               ">
             <div class="col text-center v-center-content">
               <h5 class="green">Vacunación:</h5>
-              <p>Monitor en tiempo real</p>
+              <p class="bold">Monitor en tiempo real</p>
             </div>
             <div class="col text-center v-center">
               <img src="mapa_ecuador.png" alt="mapa" width="140" />
@@ -79,7 +79,7 @@
               ">
             <div class="col text-center v-center-content">
               <h5 class="naranja">En vivo:</h5>
-              <p>El avance del virus en Ecuador</p>
+              <p class="bold">El avance del virus en Ecuador</p>
             </div>
             <div class="col text-center v-center">
               <img src="mapa_ecuador.png" alt="mapa" width="140" style="filter: sepia(1)" />
