--- a/navbar/covid/index.html
+++ b/navbar/covid/index.html
@@ -42,13 +42,13 @@
               <h6 class="">PERSONAS VACUNADAS</h6>
 
               <div class="mb-3">
-                <p class="mb-0 me-2">1 dosis</p>
+                <p class="mb-0">1 dosis</p>
                 <span class="badge bg-primary">
                   <div id="pv-1dosis"></div>
                 </span>
               </div>
               <div class="mb-3">
-                <p class="mb-0 me-2">2 dosis</p>
+                <p class="mb-0">2 dosis</p>
                 <span class="badge bg-primary">
                   <div id="pv-2dosis"></div>
                 </span>
@@ -88,19 +88,19 @@
               <h6 class="">TOTALES</h6>
 
               <div class="">
-                <p class="mb-0 me-2">Infectados</p>
+                <p class="mb-0">Infectados</p>
                 <span class="badge bg-warning">
                   <div id="tot-infectados"></div>
                 </span>
               </div>
               <div class="">
-                <p class="mb-0 me-2">Recuperados</p>
+                <p class="mb-0">Recuperados</p>
                 <span class="badge bg-warning">
                   <div id="tot-recuperados"></div>
                 </span>
               </div>
               <div class="">
-                <p class="mb-0 me-2">Fallecidos</p>
+                <p class="mb-0">Fallecidos</p>
                 <span class="badge bg-warning">
                   <div id="tot-fallecidos"></div>
                 </span>
